--- a/sasslib/style.scss
+++ b/sasslib/style.scss
@@ -1,50 +1,23 @@
 //variables & functions
-@import 'variables';
+@import "functions";
+@import "variables";
 
 //base & layout
-@import 'base';
+@import "base";
+@import "breakpoints";
+@import "grid";
 
 //colors
-@import 'colors';
+@import "colors";
 
 //components
-@import 'components/card'
+@import "components/card";
+@import "components/button";
+@import "components/navbar";
+@import "components/badge";
 
 //utilities
+@import "utilities";
 
-// h1 {
-//     color: $primary;
-//     margin-bottom: $base-margin;
-// }
-
-// a {
-//     color: $secondary;
-// }
-
-// button {
-//     color: white;
-//     border: 0;
-//     background: $primary;
-//     border-radius: $base-border-radius;
-//     padding: $base-padding;
-// }
-
-// .error {
-//     color: $error;
-//     border-color: $error;
-//     border-style: solid;
-//     margin: $base-margin;
-//     padding: $base-padding;
-//     border-radius: $base-border-radius;
-//     border-width: $base-border-thickness;
-// }
-
-// .notification {
-//     color: $secondary;
-//     border-color: $secondary;
-//     border-style: solid;
-//     margin: $base-margin;
-//     padding: $base-padding;
-//     border-radius: $base-border-radius;
-//     border-width: $base-border-thickness;
-// }
+//slides
+@import "slide";
